fix: Fixed transparent background on mobile

--- a/src/components/background/Background.module.scss
+++ b/src/components/background/Background.module.scss
@@ -5,7 +5,6 @@
 	font-family: var(--font-secondary);
 	font-size: 240px;
 	line-height: 100%;
-	font-weight: 900;
 	position: absolute;
 	top: -40px;
 	z-index: -10;
@@ -13,19 +12,16 @@
 
 	body[data-theme='designer'] & {
 		font-size: 200px;
+		font-weight: 900;
 		color: $transparent-black;
 		top: -28px;
 	}
 
 	body[data-theme='teacher'] &,
 	body[data-theme='developer'] & {
-		color: black;
-		mix-blend-mode: screen;
+		color: transparent;
 		letter-spacing: 8px;
-		text-shadow: -1px -1px 0 var(--color-primary-transparent),
-			1px -1px 0 var(--color-primary-transparent),
-			-1px 1px 0 var(--color-primary-transparent),
-			1px 1px 0 var(--color-primary-transparent);
+		-webkit-text-stroke: 2px var(--color-primary-transparent);
 	}
 
 	@include breakpoint('md', max) {
@@ -41,6 +37,11 @@
 
 		body[data-theme] & {
 			font-size: 80px;
+		}
+
+		body[data-theme='teacher'] &,
+		body[data-theme='developer'] & {
+			-webkit-text-stroke-width: 0.5px;
 		}
 	}
 }
